--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
 		<version>2.7.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>fi.syyttaja.lauta</groupId>
-	<artifactId>laiterekisteri</artifactId>
+	<groupId>fi.SYdev</groupId>
+	<artifactId>devicemanager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>laiterekisteri</name>
-	<description>SY laiterekisteri</description>
+	<name>devicemanager</name>
+	<description>devicemanager</description>
 	<properties>
 		<java.version>17</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -76,7 +76,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<release>11</release>
 				</configuration>
 			</plugin>
 			<plugin>
