--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:h2:mem:testdb
 spring.data.rest.basePath=/api
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=LEGACY
+spring.h2.console.path=/h2-console
+spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mariadb://localhost:3306/devicemanager
+#spring.datasource.username=root
+#spring.datasource.password=admin
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#${JDBC_DATABASE_URL}
+#${JDBC_DATABASE_USERNAME}
+#${JDBC_DATABASE_PASSWORD}
