--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.jpa.show-sql=true
 spring.data.rest.basePath=/api
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=LEGACY
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.path=/h2-console
-spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mariadb://localhost:3306/devicemanager
 #spring.datasource.username=root
 #spring.datasource.password=admin
