--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.jpa.show-sql=true
 spring.data.rest.basePath=/api
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.h2.console.path=/h2-console
-#spring.datasource.url=jdbc:mariadb://localhost:3306/devicemanager
-#spring.datasource.username=root
-#spring.datasource.password=admin
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+//spring.datasource.url=jdbc:h2:mem:testdb
+//spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:mariadb://localhost:3306/devicemanager
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #${JDBC_DATABASE_URL}
 #${JDBC_DATABASE_USERNAME}
 #${JDBC_DATABASE_PASSWORD}
